--- a/src/main/resources/templates/createStudent.html
+++ b/src/main/resources/templates/createStudent.html
@@ -43,17 +43,15 @@
 
                         <div class="form-group">
                             <label for="titel">Titel</label>
-                            <input class="form-control" id="titel" required th:name="title"
-                                   type="text">
+                            <input class="form-control" id="titel" required th:name="title" type="text">
                         </div>
                         <div class="form-group">
                             <label for="description">Beschreibung</label>
-                            <textarea class="form-control" id="description" required
-                                      rows="3" th:name="description"></textarea>
+                            <textarea class="form-control" id="description" required rows="3" th:name="description"></textarea>
                         </div>
                         <div class="custom-control custom-checkbox">
-                            <input class="custom-control-input" id="maxInfiniteUsers" th:name="maxInfiniteUsers"
-                                   type="checkbox">
+                            <!--DO NOT WRAP-->
+                            <input type="hidden" name="maxInfiniteUsers" value="0"/><input class="custom-control-input" type="checkbox" id="maxInfiniteUsers" onclick="this.previousSibling.value=1-this.previousSibling.value"/>
                             <label class="custom-control-label" for="maxInfiniteUsers">Anzahl
                                                                                        unbegrenzt</label>
                         </div>
@@ -63,15 +61,14 @@
                                    type="number" min="1" max="10000">
                         </div>
                         <div class="custom-control custom-checkbox">
-                            <input class="custom-control-input" id="visibility" th:name="visibility"
-                                   type="checkbox">
-                            <label class="custom-control-label" for="visibility">Private
-                                                                                 Gruppe</label>
+                            <!--DO NOT WRAP-->
+                            <input type="hidden" name="visibility" value="0"/><input class="custom-control-input" type="checkbox" id="visibility" onclick="this.previousSibling.value=1-this.previousSibling.value"/>
+                            <label class="custom-control-label" for="visibility">Privat</label>
                         </div>
                         <div class="form-group" id="lectureParent">
                             <label for="parent"></label>
                             <select class="form-control" id="parent" name="parent">
-                                <option disabled selected="true">--Bitte Veranstaltung auswählen--
+                                <option disabled selected>--Bitte Veranstaltung auswählen--
                                 </option>
                                 <option th:each="lecture : ${lectures}" th:name="parent" th:value="${lecture.getId()}" th:text="${lecture.getTitle()}">
                                 </option>
