--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -65,7 +65,7 @@
                     </tr>
                     </thead>
                     <tbody>
-                    <tr th:each="gruppe : ${gruppen}" th:switch="${gruppe.getUserMaximum() != 100000}">
+                    <tr th:each="gruppe : ${gruppen}" th:switch="${gruppe.getUserLimit() != 100000}">
                         <th scope="row">
                             <span class="badge badge-pill badge-success"
                                   style="background: lightseagreen; margin-right: 25px;"
@@ -77,7 +77,7 @@
                             Beschreibung
                         </td>
                         <td th:case="${true}">
-                            <a th:text="${gruppe.getUserMaximum()}"></a>
+                            <a th:text="${gruppe.getUserLimit()}"></a>
                         </td>
                         <td th:case="${false}">unbegrenzt</td>
                     </tr>
