"finish" service refactor + fix obvious bugs after refactor (everything should run pretty much)

--- a/src/main/resources/templates/changeMetadata.html
+++ b/src/main/resources/templates/changeMetadata.html
@@ -30,7 +30,7 @@
                 <a href="/createStudent" th:href="@{/gruppen2/createStudent}">Erstellen</a>
             </li>
             <li>
-                <a href="/findGroup" th:href="@{/gruppen2/findGroup}">Suche</a>
+                <a href="/searchPage" th:href="@{/gruppen2/searchPage}">Suche</a>
             </li>
         </ul>
     </nav>
