--- a/src/main/resources/templates/createOrga.html
+++ b/src/main/resources/templates/createOrga.html
@@ -31,7 +31,7 @@
                 <a href="/createStudent" th:href="@{/gruppen2/createStudent}">Erstellen</a>
             </li>
             <li>
-                <a th:href="@{/gruppen2/findGroup}" href="/findGroup">Suche</a>
+                <a th:href="@{/gruppen2/searchPage}" href="/searchPage">Suche</a>
             </li>
         </ul>
     </nav>
@@ -53,31 +53,33 @@
                             <textarea class="form-control" id="description" required rows="3" th:name="description"></textarea>
                         </div>
                         <div class="custom-control custom-checkbox">
-                            <!--DO NOT WRAP-->
-                            <input type="hidden" name="maxInfiniteUsers" value="0"/><input class="custom-control-input" type="checkbox" id="maxInfiniteUsers" onclick="this.previousSibling.value=1-this.previousSibling.value"/>
+                            <!--DUMMY-->
+                            <input type="hidden" id="maxInfiniteUsersDummy" name="maxInfiniteUsers" value="0"/>
+                            <input class="custom-control-input" type="checkbox" id="maxInfiniteUsers" onchange="$('#maxInfiniteUsersDummy').val(this.checked ? 1 : 0)"/>
                             <label class="custom-control-label" for="maxInfiniteUsers">Anzahl
                                                                                        unbegrenzt</label>
                         </div>
                         <div class="form-group mt-3" id="userMaximum">
                             <label for="userMaximum">Teilnehmeranzahl</label>
-                            <input class="form-control" th:name="userMaximum" type="number" min="1" max="100000" value="1">
+                            <input class="form-control" id="userMax" th:name="userMaximum" type="number" min="1" max="100000" value="1">
                         </div>
                         <div class="custom-control custom-checkbox" id="privateCheckbox">
-                            <!--DO NOT WRAP-->
-                            <input type="hidden" name="visibility" value="0"/><input class="custom-control-input" type="checkbox" id="visibility" onclick="this.previousSibling.value=1-this.previousSibling.value"/>
+                            <!--DUMMY-->
+                            <input type="hidden" id="visibilityDummy" name="visibility" value="0"/>
+                            <input class="custom-control-input" type="checkbox" id="visibility" onchange="$('#visibilityDummy').val(this.checked ? 1 : 0)"/>
                             <label class="custom-control-label" for="visibility">Privat</label>
                         </div>
                         <div class="custom-control custom-checkbox" id="lectureCheckbox">
-                            <!--DO NOT WRAP-->
-                            <input type="hidden" name="lecture" value="0"/><input class="custom-control-input" type="checkbox" id="lecture" onclick="this.previousSibling.value=1-this.previousSibling.value"/>
+                            <!--DUMMY-->
+                            <input type="hidden" id="lectureDummy" name="lecture" value="0"/>
+                            <input class="custom-control-input" type="checkbox" id="lecture" onchange="$('#lectureDummy').val(this.checked ? 1 : 0)"/>
                             <label class="custom-control-label" for="lecture">Veranstaltung</label>
                         </div>
-                        <div class="form-group" id="lectureParent">
-                            <label for="parent"></label>
+                        <div class="form-group mt-3" id="lectureParent">
+                            <label for="parent">Veranstaltungszugehörigkeit</label>
                             <select class="form-control" id="parent" th:name="parent">
-                                <option disabled selected>--Bitte Veranstaltung auswählen--
-                                </option>
-                                <option th:each="lecture : ${lectures}" th:name="parent" th:value="${lecture.getId()}" th:text="${lecture.getTitle()}"></option>
+                                <option value="" selected>--Keine--</option>
+                                <option th:each="lecture : ${lectures}" name="parent" th:value="${lecture.getId()}" th:text="${lecture.getTitle()}"></option>
                             </select>
                         </div>
                         <div class="form-group pt-4">
@@ -105,7 +107,6 @@
     </div>
 
     <script>
-        //TODO: Hab ich kaputt gemacht
         // Add the following code if you want the name of the file appear on select
         $(".custom-file-input").on("change", function () {
             const fileName = $(this).val().split("\\").pop();
@@ -115,28 +116,28 @@
         // Collapse lectureParent if lecture
         $(document).ready(function () {
             $('#lecture').change(function () {
-                $('#lectureParent').prop('disabled', function (i, v) { return !v; });
+                $('#parent').prop('disable', function (i, v) { return !v; });
             });
         });
 
         // Collapse provateCheckbox if lecture
         $(document).ready(function () {
             $('#lecture').change(function () {
-                $('#privateCheckbox').prop('disabled', function (i, v) { return !v; });
+                $('#visibility').prop('disabled', function (i, v) { return !v; });
             });
         });
 
         // Collapse lectureCheckbox if private
         $(document).ready(function () {
             $('#visibility').change(function () {
-                $('#lectureCheckbox').prop('disabled', function (i, v) { return !v; });
+                $('#lecture').prop('disabled', function (i, v) { return !v; });
             });
         });
 
         // Collapse userMaximum if infinite
         $(document).ready(function () {
             $('#maxInfiniteUsers').change(function () {
-                $('#userMaximum').prop('disabled', function (i, v) { return !v; });
+                $('#userMax').prop('readonly', function (i, v) { return !v; });
             });
         });
     </script>
