--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -23,7 +23,7 @@
                 <a href="/createStudent" th:href="@{/gruppen2/createStudent}">Erstellen</a>
             </li>
             <li class="active">
-                <a th:href="@{/gruppen2/findGroup}" href="/findGroup">Suche</a>
+                <a th:href="@{/gruppen2/searchPage}" href="/searchPage">Suche</a>
             </li>
         </ul>
     </nav>
@@ -35,7 +35,7 @@
                 <h1>Gruppensuche</h1>
                 <div class="shadow-sm p-2"
                      style="border: 10px solid aliceblue; border-radius: 5px; background: aliceblue">
-                    <form method="get" th:action="@{/gruppen2/findGroup}">
+                    <form method="get" th:action="@{/gruppen2/search}">
                         <div class="form-group">
                             <label for="suchleiste">Suchbegriff:</label>
                             <input class="form-control" id="suchleiste"
@@ -46,11 +46,9 @@
                                 style="background: #52a1eb; border-style: none"
                                 type="submit">Suchen
                         </button>
-                        <button class="btn btn-primary"
-                                style="background: deepskyblue; border-style: none"
-                                type="submit">
-                            <a href="/gruppen2/findGroup?suchbegriff=" style="color: white">Alle
-                                                                                            anzeigen</a>
+                        <button class="btn btn-primary" style="background: deepskyblue; border-style: none" type="submit">
+                            <a href="/gruppen2/search?suchbegriff=" style="color: white">Alle
+                                                                                         anzeigen</a>
                         </button>
                     </form>
                 </div>
