--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <div class="mx-auto" style="vertical-align: center; border-radius: 5px; horiz-align: center; top: 50%; left: 50%;">
-    <div class="jumbotron" style="background: aliceblue">
+    <div class="jumbotron" style="background: aliceblue;">
         <div class="container">
             <h1 class="display-3">UPSI</h1>
             <p class="lead">Da ist wohl etwas schiefgelaufen :(</p><br>
@@ -30,7 +30,7 @@
         <button class="btn btn-primary"
                 style="background: #52a1eb; border-style: none;">
             <a href="#" onclick="window.history.back(-1);return false;" role="button"
-               style="color: white">Zurück</a>
+               style="color: white;">Zurück</a>
         </button>
     </div>
 </div>
