--- a/src/main/resources/templates/createStudent.html
+++ b/src/main/resources/templates/createStudent.html
@@ -39,7 +39,7 @@
                 <h1>Gruppenerstellung</h1>
                 <form method="post" th:action="@{/gruppen2/createStudent}">
                     <div class="shadow-sm p-2"
-                         style=" border: 10px solid aliceblue; border-radius: 5px; background: aliceblue">
+                         style=" border: 10px solid aliceblue; border-radius: 5px; background: aliceblue;">
 
                         <div class="form-group">
                             <label for="titel">Titel</label>
@@ -57,9 +57,9 @@
                                                                                        unbegrenzt</label>
                         </div>
                         <div class="form-group mt-3" id="userMaximum">
-                            <label for="userMaximum">Teilnehmeranzahl</label>
+                            <label for="userMax">Teilnehmeranzahl</label>
                             <input class="form-control" th:name="userMaximum"
-                                   type="number" min="1" max="10000">
+                                   type="number" min="1" max="10000" id="userMax">
                         </div>
                         <div class="custom-control custom-checkbox">
                             <!--DUMMY-->
@@ -77,7 +77,7 @@
                         </div>
                         <div class="form-group pt-4">
                             <button class="btn btn-primary"
-                                    style="background: #52a1eb; border-style: none"
+                                    style="background: #52a1eb; border-style: none;"
                                     type="submit">Erstellen
                             </button>
                         </div>
