--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -34,28 +34,28 @@
             <div class="col-10">
                 <h1>Meine Gruppen</h1>
                 <form method="get" th:action="@{/}">
-                    <h3 style="color: dodgerblue; font-weight: bold; font-optical-sizing: auto">
-                        <small style="font-weight: normal; color: black">Mitglied in </small>
-                        <small style="font-weight: bold; color: black"
+                    <h3 style="color: dodgerblue; font-weight: bold; font-optical-sizing: auto;">
+                        <small style="font-weight: normal; color: black;">Mitglied in </small>
+                        <small style="font-weight: bold; color: black;"
                                th:text="${gruppen.size()}"></small>
-                        <small style="font-weight: normal; color: black"
+                        <small style="font-weight: normal; color: black;"
                                th:if='${gruppen.size()==1}'> Gruppe.</small>
-                        <small style="font-weight: normal; color: black"
+                        <small style="font-weight: normal; color: black;"
                                th:if='${gruppen.size()!=1}'> Gruppen.</small>
                     </h3>
                     <br>
                     <div th:each="gruppe: ${gruppen}">
                         <div class="shadow-sm p-4"
-                             style="border: none; border-radius: 5px; background: aliceblue">
-                            <h3 style="color: dodgerblue; font-weight: bold; font-optical-sizing: auto; overflow-wrap: break-word">
+                             style="border: none; border-radius: 5px; background: aliceblue;">
+                            <h3 style="color: dodgerblue; font-weight: bold; font-optical-sizing: auto; overflow-wrap: break-word;">
                                 <span class="badge badge-pill badge-success"
-                                      style="background: lightseagreen; margin-right: 25px; float: right"
+                                      style="background: lightseagreen; margin-right: 25px; float: right;"
                                       th:if='${gruppe.getType() == lecture}'>Veranstaltung</span>
                                 <a th:href="@{/gruppen2/details/{id}(id=${gruppe.getId()})}"
                                    th:text="${gruppe.getTitle()}"></a>
                             </h3>
-                            <div class="shadow-sm p-4" style="background: white">
-                                <p style="overflow-wrap: break-word; font-optical-sizing: auto"
+                            <div class="shadow-sm p-4" style="background: white;">
+                                <p style="overflow-wrap: break-word; font-optical-sizing: auto;"
                                    th:text="${#strings.abbreviate(gruppe.getDescription(),300)}"></p>
                             </div>
                         </div>
