--- a/src/main/resources/templates/joinprivate.html
+++ b/src/main/resources/templates/joinprivate.html
@@ -34,11 +34,11 @@
 <main th:fragment="bodycontent">
     <div class="container-fluid">
         <div class="shadow-sm p-4"
-             style="border: 1px solid aliceblue; border-radius: 5px; background: aliceblue">
-            <h1 style="color: black; font-weight: bold; font-optical-sizing: auto; overflow-wrap: break-word"
+             style="border: 1px solid aliceblue; border-radius: 5px; background: aliceblue;">
+            <h1 style="color: black; font-weight: bold; font-optical-sizing: auto; overflow-wrap: break-word;"
                 th:text="${group.getTitle()}"></h1>
-            <div class="shadow-sm p-4" style="background: white">
-                <p style="overflow-wrap: break-word; font-optical-sizing: auto"
+            <div class="shadow-sm p-4" style="background: white;">
+                <p style="overflow-wrap: break-word; font-optical-sizing: auto;"
                    th:text="${group.getDescription()}"></p>
             </div>
             <div class="form-group mt-2" th:if="${group.getMembers().size() < group.getUserLimit()}">
