--- a/src/main/resources/templates/detailsMember.html
+++ b/src/main/resources/templates/detailsMember.html
@@ -43,7 +43,7 @@
                         <a class="fa fa-pencil"
                            style="font-size:30px; width: 5%;"
                            th:href="@{/gruppen2/details/changeMetadata/{id}(id=${group.getId()})}"
-                           th:if="${roles.get(user.getId()) == admin}"></a>
+                           th:if="${group.getRoles().get(user.getId()) == admin}"></a>
                     </div>
                 </div>
                 <h3>
@@ -57,7 +57,7 @@
                           th:text="${parent?.getTitle()}">Parent</span>
 
                     <div class="input-group mb-3" style="margin-top: 10px;"
-                         th:if="${roles.get(user.getId()) == admin}">
+                         th:if="${group.getRoles().get(user.getId()) == admin}">
                         <div class="input-group-prepend">
                             <span class="input-group-text" id="inputGroup-sizing-default"
                                   style="background: #52a1eb;">Einladungslink:</span>
