--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -53,9 +53,9 @@
                     </form>
                 </div>
                 <br>
-                <table class="table">
+                <table class="table" th:if='${!gruppen.isEmpty()}'>
                     <!-- Erscheint dann, wenn man "Suchen" Button klickt und Ergebnisse angezeigt werden, aber so solls aussehen -->
-                    <thead th:if='${!gruppen.isEmpty()}'>
+                    <thead>
                     <tr>
                         <th scope="col">Gruppenname</th>
                         <th scope="col">Beschreibung</th>
@@ -67,8 +67,8 @@
                         <th scope="row">
                             <span class="badge badge-pill badge-success"
                                   style="background: lightseagreen; margin-right: 25px;"
-                                  th:if='${gruppe.getType() == gruppe.getType().LECTURE}'>Veranstaltung</span>
-                            <a th:href="@{/gruppen2/detailsSearch(id=${gruppe.getId()})}"
+                                  th:if='${gruppe.getType() == lecture}'>Veranstaltung</span>
+                            <a th:href="@{/gruppen2/details/{id}(id=${gruppe.getId()})}"
                                th:text="${#strings.abbreviate(gruppe.getTitle(), 50)}">Gruppenname</a>
                         </th>
                         <td style="" th:text="${#strings.abbreviate(gruppe.getDescription(), 50)}">
