new GroupCreationController mappings

--- a/src/main/resources/templates/changeMetadata.html
+++ b/src/main/resources/templates/changeMetadata.html
@@ -24,10 +24,10 @@
                 <a href="/" th:href="@{/gruppen2}">Gruppen</a>
             </li>
             <li th:case="${true}">
-                <a href="/createOrga" th:href="@{/gruppen2/createOrga}">Erstellen</a>
+                <a href="/create/orga" th:href="@{/gruppen2/create/orga}">Erstellen</a>
             </li>
             <li th:case="${false}">
-                <a href="/createStudent" th:href="@{/gruppen2/createStudent}">Erstellen</a>
+                <a href="/create/student" th:href="@{/gruppen2/create/student}">Erstellen</a>
             </li>
             <li>
                 <a href="/searchPage" th:href="@{/gruppen2/searchPage}">Suche</a>
