--- a/src/main/resources/templates/createStudent.html
+++ b/src/main/resources/templates/createStudent.html
@@ -27,7 +27,7 @@
                 <a href="/create/student" th:href="@{/gruppen2/create/student}">Erstellen</a>
             </li>
             <li>
-                <a th:href="@{/gruppen2/searchPage}" href="/searchPage">Suche</a>
+                <a th:href="@{/gruppen2/search}" href="/search">Suche</a>
             </li>
         </ul>
     </nav>
