--- a/src/main/resources/templates/detailsMember.html
+++ b/src/main/resources/templates/detailsMember.html
@@ -24,7 +24,7 @@
                 <a href="/create/student" th:href="@{/gruppen2/create/student}">Erstellen</a>
             </li>
             <li>
-                <a href="/searchPage" th:href="@{/gruppen2/searchPage}">Suche</a>
+                <a href="/search" th:href="@{/gruppen2/search}">Suche</a>
             </li>
         </ul>
     </nav>
@@ -42,7 +42,7 @@
                     <div class="col-1">
                         <a class="fa fa-pencil"
                            style="font-size:30px; width: 5%;"
-                           th:href="@{/gruppen2/details/changeMetadata/{id}(id=${group.getId()})}"
+                           th:href="@{/gruppen2/details/{id}/meta(id=${group.getId()})}"
                            th:if="${group.getRoles().get(user.getId()) == admin}"></a>
                     </div>
                 </div>
@@ -83,15 +83,14 @@
                             style="background: #52a1eb; border: none; margin: 5px;">
                         <a style="color: white;" th:href="@{/gruppen2}">Zurück</a>
                     </button>
-                    <form method="post" th:action="@{/gruppen2/leaveGroup}">
+                    <form method="post" th:action="@{/gruppen2/details/{id}/leave(id=${group.getId()})}">
                         <button class="btn btn-danger" style="border-style: none; margin: 5px;"
-                                th:name="group_id" th:value="${group.getId()}"
+                                th:name="group_id"
                                 type="submit">Gruppe verlassen
                         </button>
                     </form>
-                    <form method="post" th:action="@{/gruppen2/deleteGroup}">
-                        <button class="btn btn-danger" style="border-style: none; margin: 5px;"
-                                th:name="group_id" th:value="${group.getId()}"
+                    <form method="post" th:action="@{/gruppen2/details/{id}/destroy(id=${group.getId()})}">
+                        <button class="btn btn-danger" style="border-style: none; margin: 5px;" th:name="group_id"
                                 th:if="${group.getRoles().get(user.getId()) == admin}"
                                 type="submit">Gruppe löschen
                         </button>
@@ -111,7 +110,7 @@
                 </div>
                 <div th:if="${group.getRoles().get(user.getId()) == admin}">
                     <form method="get"
-                          th:action="@{/gruppen2/details/members/{id}(id=${group.getId()})}">
+                          th:action="@{/gruppen2/details/{id}/members(id=${group.getId()})}">
                         <button class="btn btn-secondary" style="background: slategrey; float: left;">
                             Mitglieder bearbeiten
                         </button>
