--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -23,7 +23,7 @@
                 <a href="/create/student" th:href="@{/gruppen2/create/student}">Erstellen</a>
             </li>
             <li>
-                <a href="/searchPage" th:href="@{/gruppen2/searchPage}">Suche</a>
+                <a href="/search" th:href="@{/gruppen2/search}">Suche</a>
             </li>
         </ul>
     </nav>
